<resources>
    <string name="app_name">Cesdestore</string>
    <string name="id">id</string>
    <string name="buscar">Buscar</string>
    <string name="productos">Productos</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="descripcion">Descripcion</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
</resources>
